# LiHiSTO

./: LICENSE  README.md  setup.cfg  setup.py
src/LiHiSTO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/example_pkg_semicolon123nnn.egg-info/: PKG-INFO  SOURCES.txt
src/stopwords_hindi/: final_hindi_stopwords.txt  hindi_sw.py
