[metadata]
name = LiHiSTO
version = 0.0.1
author = Swati Rajwal
author_email = rajwalswati213@gmail.com
description = A package with a comprehensive list of 820 Hindi Stopwords
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/semicolon123/sampleproject
project_urls =
    Bug Tracker = https://github.com/semicolon123/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src